# chroma_ollama

./: KAFKA_COMPLETE_GUIDE.md  README.md  TEST_REPORT.md  env.example  pixi.toml  pyproject.toml  requirements.txt  test_enhanced_workflow.py  test_improvements.py  test_kafka.py  test_task_generator.py
chroma_ollama/: __init__.py  config.py  ingest.py  logging.py  pool_worker.py  retry.py  search.py  task_generator.py  utils.py  worker.py
